--- a/.gitignore
+++ b/.gitignore
@@ -24,3 +24,11 @@ dist-ssr
 *.sw?
 
 package-lock.json
+
+# Environment variables
+.env
+.env.local
+.env.production
+
+# Temporary PDF files
+temp-pdfs/
